--- a/Equipments.html
+++ b/Equipments.html
@@ -101,7 +101,7 @@
 
       <p style="padding-bottom: 40px;">
         <span style="font-weight: bolder;">Equipment: Desert Eagle</span>
-        <p class="epic"><img src="Pics/deagle.png" alt="" class="img-responsive"></p>
+        <p class="epic"><img src="Pics/deagle.png" alt=""></p>
         <p class="einfo" style="margin-bottom: 40px;">Information: The Agent's issued firearm, which should be kept on the Agent at all times.</p>
     </p>
     
