--- a/Arrest.html
+++ b/Arrest.html
@@ -44,7 +44,7 @@
         
         <li>
           <a href="Arrest.html"
-            ><span class="material-symbols-outlined"> gavel </span>Arrest</a
+            ><span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;"> gavel </span>Arrest</a
           >
         </li>
         <li>
@@ -74,6 +74,13 @@
             ><span class="material-symbols-outlined"> person_book </span>Roster</a
           >
         </li>
+
+        <li>
+          <a href=""
+            ><span class="material-symbols-outlined"> check </span>Discord</a
+          >
+        </li>
+
       </ul>
       <div class="user-account">
         <div class="user-profile">
