--- a/CoC.html
+++ b/CoC.html
@@ -49,7 +49,7 @@
         </li>
         <li>
           <a href="CoC.html"
-            ><span class="material-symbols-outlined"> stars </span>CoC</a
+            ><span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;"> stars </span>CoC</a
           >
         </li>
         <li>
@@ -74,6 +74,13 @@
             ><span class="material-symbols-outlined"> person_book </span>Roster</a
           >
         </li>
+
+        <li>
+          <a href="Discord.html"
+            ><span class="material-symbols-outlined"> check </span>Discord</a
+          >
+        </li>
+
       </ul>
       <div class="user-account">
         <div class="user-profile">
