--- a/Discord.html
+++ b/Discord.html
@@ -25,7 +25,7 @@
         </h4>
         <li>
           <a href="index.html">
-            <span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;"> Home </span
+            <span class="material-symbols-outlined"> Home </span
             >Home</a
           >
         </li>
@@ -77,10 +77,10 @@
 
         <li>
           <a href="Discord.html"
-            ><span class="material-symbols-outlined"> check </span>Discord</a
+            ><span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;"> check </span>Discord</a
           >
         </li>
-        
+
       </ul>
       <div class="user-account">
         <div class="user-profile">
@@ -97,29 +97,18 @@
         <!-- Main content -->
   <main class="main-content">
     <div class="main-text">
-        <p class="nbilogo"><img src="ndAN0Ss.png" alt=""></p>
+      <p><img src="ndAN0Ss.png" alt=""></p>
       <h1><span style="color: blueviolet;">F</span>EDERAL <span style="color: blueviolet;">B</span>UREAU <span>OF</span> <span style="color: blueviolet;">I</span>NVESTIGATION</h1>
       <h2>● <span style="color: blueviolet;">F</span>idelity ● <span style="color: blueviolet;">B</span>ravery ● <span style="color: blueviolet;">I</span>ntegrity ●</h2>
       <p>Celestial City Roleplay</p>
     </div>
 
-    <div class="intro">
-        <h2>Introduction</h2>
-        <p style="padding-bottom: 20px;">If you are reading this handbook, you may be either thinking about applying for the Federal Bureau of Investigation, or have recently joined the Federal Bureau of Investigation.
-            The Federal Bureau of Investigation is a law enforcement and domestic intelligence agency charged with protecting and defending San Andreas against terrorist threats; upholding and enforcing the criminal laws of the United States; and providing criminal justice services to Law Enforcement Agencies. The Federal Bureau of Investigation conducts all of its work anonymously, in which Agents may never reveal their true identity.
-            The Federal Bureau of Investigation revolves around investigatory Case Files, which involves heavy undercover work and investigations.
-            </p>
-        <h2>Career Path</h2>
-        <p style="padding-bottom: 20px;">Becoming a Federal Bureau of Investigation Agent is like no other career choice you have ever explored. It is challenging, exciting and rewarding. As a Federal Bureau of Investigation Agent you work on matters including drug-trafficking, weapon-trafficking, human-trafficking, organized crime, public corruption, kidnapping, and other matters that breach the laws of the State, whilst permanently staying under a false identity at all times</p>
-        <h2>Applying for the FBI</h2>
-        <p>To be applicable for the Federal Bureau of Investigation, all applicants must be qualified. All of the Federal Bureau of Investigation qualification requirements can be found on our Email. If and when the applicant has had their application accepted, the applicant must pass the ride-along phase. The applicant receives an email from the National Academy department within 24 hours after submitting the application, the whole recruitment process takes one to three days.</p>
-    </div>
+    <div class="intro" style="text-align: center;">
+      <div class="intro" style="text-align: center;">
+        
+      <h1 style="font-size: 2rem;">Coming Soon!</h1>
 
-    <div class="main-text">
-      <h2>Head Quarters</h2>
-      <p class="headimg"><img src="sa-mp-491.png" alt=""></p>
-      <p class="headimg"><img src="sa-mp-089.png" alt=""></p>
-    </div>
+      </div>
   </main>
     </section>
 
