--- a/Equipments.html
+++ b/Equipments.html
@@ -59,7 +59,7 @@
         </li>
         <li>
           <a href="Equipments.html"
-            ><span class="material-symbols-outlined"> radio_button_checked </span>Equipments</a
+            ><span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;"> radio_button_checked </span>Equipments</a
           >
         </li>
         <li>
@@ -74,6 +74,13 @@
             ><span class="material-symbols-outlined"> person_book </span>Roster</a
           >
         </li>
+
+        <li>
+          <a href="Discord.html"
+            ><span class="material-symbols-outlined"> check </span>Discord</a
+          >
+        </li>
+
       </ul>
       <div class="user-account">
         <div class="user-profile">
