--- a/Force.html
+++ b/Force.html
@@ -37,7 +37,7 @@
         </li>
         <li>
           <a href="Force.html"
-            ><span class="material-symbols-outlined"> list </span
+            ><span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;"> list </span
             >Force Matrix</a
           >
         </li>
@@ -74,6 +74,13 @@
             ><span class="material-symbols-outlined"> person_book </span>Roster</a
           >
         </li>
+
+        <li>
+          <a href="Discord.html"
+            ><span class="material-symbols-outlined"> check </span>Discord</a
+          >
+        </li>
+
       </ul>
       <div class="user-account">
         <div class="user-profile">
