--- a/Roster.html
+++ b/Roster.html
@@ -71,9 +71,16 @@
        
         <li>
           <a href="Roster.html"
-            ><span class="material-symbols-outlined"> person_book </span>Roster</a
+            ><span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;"> person_book </span>Roster</a
           >
         </li>
+
+        <li>
+          <a href="Discord.html"
+            ><span class="material-symbols-outlined"> check </span>Discord</a
+          >
+        </li>
+
       </ul>
       <div class="user-account">
         <div class="user-profile">
@@ -99,7 +106,7 @@
     <div class="intro" style="text-align: center;">
       <div class="intro" style="text-align: center;">
         
-      <h1 style="font-size: 10vh;">Coming Soon!</h1>
+      <h1 style="font-size: 2rem;">Coming Soon!</h1>
 
       </div>
   </main>
