--- a/Rules.html
+++ b/Rules.html
@@ -31,7 +31,7 @@
         </li>
         <li>
           <a href="Rules.html"
-            ><span class="material-symbols-outlined"> overview </span
+            ><span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;"> overview </span
             >Rules</a
           >
         </li>
@@ -74,6 +74,13 @@
             ><span class="material-symbols-outlined"> person_book </span>Roster</a
           >
         </li>
+
+        <li>
+          <a href="Discord.html"
+            ><span class="material-symbols-outlined"> check </span>Discord</a
+          >
+        </li>
+
       </ul>
       <div class="user-account">
         <div class="user-profile">
