--- a/Vehicles.html
+++ b/Vehicles.html
@@ -64,7 +64,7 @@
         </li>
         <li>
           <a href="Vehicles.html"
-            ><span class="material-symbols-outlined">
+            ><span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;">
                 minor_crash </span
             >Vehicles</a
           >
@@ -74,6 +74,13 @@
             ><span class="material-symbols-outlined"> person_book </span>Roster</a
           >
         </li>
+
+        <li>
+          <a href="Discord.html"
+            ><span class="material-symbols-outlined"> check </span>Discord</a
+          >
+        </li>
+
       </ul>
       <div class="user-account">
         <div class="user-profile">
@@ -103,7 +110,7 @@
         <p style="padding-bottom: 40px;">
           <span style="font-weight: bolder;">Vehicle: Premier</span>
           <br>
-          <img src="Pics/premier.jpg" alt="" class="epic">
+          <img src="Pics/premier.jpg" alt="" class="vpic">
           <br>
           <span>Access: All FBI members have access to this vehicle.</span>
         </p>
@@ -111,7 +118,7 @@
         <p style="padding-bottom: 40px;">
           <span style="font-weight: bolder;">Vehicle: Sultan</span>
           <br>
-          <img src="Pics/sultan.jpg" alt="" class="epic">
+          <img src="Pics/sultan.jpg" alt="" class="vpic">
           <br>
           <span>Access: All FBI members have access to this vehicle.</span>
         </p>
@@ -119,7 +126,7 @@
         <p style="padding-bottom: 40px;">
           <span style="font-weight: bolder;">Vehicle: Buffalo</span>
           <br>
-          <img src="Pics/bufallo.jpg" alt="" class="epic">
+          <img src="Pics/bufallo.jpg" alt="" class="vpic">
           <br>
           <span>Access: All FBI members have access to this vehicle.</span>
         </p>
@@ -127,7 +134,7 @@
         <p style="padding-bottom: 40px;">
           <span style="font-weight: bolder;">Vehicle: Huntley</span>
           <br>
-          <img src="Pics/Huntley.jpg" alt="" class="epic">
+          <img src="Pics/Huntley.jpg" alt="" class="vpic">
           <br>
           <span>Access: All FBI members have access to this vehicle.</span>
         </p>
@@ -135,7 +142,7 @@
         <p style="padding-bottom: 40px;">
           <span style="font-weight: bolder;">Vehicle: LVPD Cruiser</span>
           <br>
-          <img src="Pics/lvpd.jpg" alt="" class="epic">
+          <img src="Pics/lvpd.jpg" alt="" class="vpic">
           <br>
           <span>Access: All FBI members have access to this vehicle.</span>
         </p>
@@ -143,7 +150,7 @@
         <p style="padding-bottom: 40px;">
           <span style="font-weight: bolder;">Vehicle: Maverick</span>
           <br>
-          <img src="Pics/maverick.jpg" alt="" class="epic">
+          <img src="Pics/maverick.jpg" alt="" class="vpic">
           <br>
           <span>Access: All FBI members have access to this vehicle.</span>
         </p>
@@ -151,7 +158,7 @@
         <p style="padding-bottom: 40px;">
           <span style="font-weight: bolder;">Vehicle: Enforcer</span>
           <br>
-          <img src="Pics/enforcer.jpg" alt="" class="epic">
+          <img src="Pics/enforcer.jpg" alt="" class="vpic">
           <br>
           <span>Access: Only when needed.</span>
         </p>
@@ -159,7 +166,7 @@
         <p style="padding-bottom: 40px;">
           <span style="font-weight: bolder;">Vehicle: FBI Truck</span>
           <br>
-          <img src="Pics/fbi truck.jpg" alt="" class="epic">
+          <img src="Pics/fbi truck.jpg" alt="" class="vpic">
           <br>
           <span>Access: All FBI members have access to this vehicle.</span>
         </p>
@@ -167,7 +174,7 @@
         <p style="padding-bottom: 40px;">
           <span style="font-weight: bolder;">Vehicle: FBI Rancher</span>
           <br>
-          <img src="Pics/fbi rancher.jpg" alt="" class="epic">
+          <img src="Pics/fbi rancher.jpg" alt="" class="vpic">
           <br>
           <span>Access: All FBI members have access to this vehicle.</span>
         </p>
