--- a/Div.html
+++ b/Div.html
@@ -54,7 +54,7 @@
         </li>
         <li>
           <a href="Div.html"
-            ><span class="material-symbols-outlined"> safety_divider </span>Divissions</a
+            ><span class="material-symbols-outlined" style="color: black; background: white; border-radius: 4px;"> safety_divider </span>Divissions</a
           >
         </li>
         <li>
@@ -74,6 +74,13 @@
             ><span class="material-symbols-outlined"> person_book </span>Roster</a
           >
         </li>
+
+        <li>
+          <a href="Discord.html"
+            ><span class="material-symbols-outlined"> check </span>Discord</a
+          >
+        </li>
+
       </ul>
       <div class="user-account">
         <div class="user-profile">
